--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,5 @@
 name: salsa
 channels:
-  - bioconda
   - pytorch
   - nvidia
   - conda-forge
@@ -8,19 +7,28 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
+  - argon2-cffi=21.3.0=pyhd3eb1b0_0
+  - argon2-cffi-bindings=21.2.0=py311h5eee18b_1
+  - asttokens=2.0.5=pyhd3eb1b0_0
+  - async-lru=2.0.4=py311h06a4308_0
+  - attrs=24.3.0=py311h06a4308_0
   - audioread=3.0.1=py311h38be061_1
+  - babel=2.16.0=py311h06a4308_0
+  - beautifulsoup4=4.12.3=py311h06a4308_0
   - blas=1.0=mkl
+  - bleach=6.2.0=py311h06a4308_0
   - bottleneck=1.3.7=py311hf4808d0_0
   - brotli=1.0.9=h5eee18b_8
   - brotli-bin=1.0.9=h5eee18b_8
   - brotli-python=1.0.9=py311ha362b79_8
   - bzip2=1.0.8=h5eee18b_6
   - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2024.7.2=h06a4308_0
-  - certifi=2024.7.4=py311h06a4308_0
+  - ca-certificates=2025.2.25=h06a4308_0
+  - certifi=2025.1.31=py311h06a4308_0
   - cffi=1.16.0=py311hb3a22ac_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
+  - comm=0.2.1=py311h06a4308_0
   - contourpy=1.2.0=py311hdb19cb5_0
   - cuda-cudart=11.8.89=0
   - cuda-cupti=11.8.87=0
@@ -31,9 +39,11 @@ dependencies:
   - cycler=0.11.0=pyhd3eb1b0_0
   - cyrus-sasl=2.1.28=h52b45da_1
   - dbus=1.13.18=hb2f20db_0
+  - debugpy=1.8.11=py311h6a678d5_0
   - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd3eb1b0_0
+  - executing=0.8.3=pyhd3eb1b0_0
   - expat=2.6.2=h6a678d5_0
-  - ffmpeg=4.2.2=h20bf706_0
   - filelock=3.13.1=py311h06a4308_0
   - fontconfig=2.14.1=h4c34cd2_2
   - fonttools=4.51.0=py311h5eee18b_0
@@ -48,14 +58,30 @@ dependencies:
   - gnutls=3.6.15=he1e5248_0
   - gst-plugins-base=1.14.1=h6a678d5_1
   - gstreamer=1.14.1=h5eee18b_1
+  - h11=0.14.0=py311h06a4308_0
   - h5py=3.11.0=py311h865a13c_0
   - hdf5=1.12.1=h2b7332f_3
   - icu=73.1=h6a678d5_0
   - importlib-metadata=7.1.0=pyha770c72_0
   - intel-openmp=2023.1.0=hdb19cb5_46306
+  - ipykernel=6.29.5=py311h06a4308_1
+  - ipython=8.30.0=py311h06a4308_0
+  - jedi=0.19.2=py311h06a4308_0
   - jinja2=3.1.4=py311h06a4308_0
   - joblib=1.4.2=pyhd8ed1ab_0
   - jpeg=9e=h5eee18b_1
+  - json5=0.9.25=py311h06a4308_0
+  - jsonschema=4.23.0=py311h06a4308_0
+  - jsonschema-specifications=2023.7.1=py311h06a4308_0
+  - jupyter-lsp=2.2.0=py311h06a4308_0
+  - jupyter_client=8.6.3=py311h06a4308_0
+  - jupyter_core=5.7.2=py311h06a4308_0
+  - jupyter_events=0.12.0=py311h06a4308_0
+  - jupyter_server=2.15.0=py311h06a4308_0
+  - jupyter_server_terminals=0.4.4=py311h06a4308_1
+  - jupyterlab=4.3.4=py311h06a4308_0
+  - jupyterlab_pygments=0.3.0=py311h06a4308_0
+  - jupyterlab_server=2.27.3=py311h06a4308_0
   - kiwisolver=1.4.4=py311h6a678d5_0
   - krb5=1.20.1=h143b758_1
   - lame=3.100=h166bdaf_1003
@@ -102,6 +128,7 @@ dependencies:
   - libpq=12.17=hdbd6064_0
   - librosa=0.10.2.post1=pyhd8ed1ab_0
   - libsndfile=1.2.2=hc60ed4a_1
+  - libsodium=1.0.18=h7b6447c_0
   - libssh2=1.11.0=h251f7ec_0
   - libstdcxx-ng=13.2.0=hc0a3c3a_7
   - libtasn1=4.19.0=h166bdaf_0
@@ -122,6 +149,8 @@ dependencies:
   - markupsafe=2.1.3=py311h5eee18b_0
   - matplotlib=3.8.4=py311h06a4308_0
   - matplotlib-base=3.8.4=py311ha02d727_0
+  - matplotlib-inline=0.1.6=py311h06a4308_0
+  - mistune=3.1.2=py311h06a4308_0
   - mkl=2023.1.0=h213fc3f_46344
   - mkl-service=2.4.0=py311h5eee18b_1
   - mkl_fft=1.3.8=py311h5eee18b_0
@@ -132,24 +161,40 @@ dependencies:
   - mpmath=1.3.0=py311h06a4308_0
   - msgpack-python=1.0.8=py311h52f7536_0
   - mysql=5.7.24=h721c034_2
+  - nbclient=0.10.2=py311h06a4308_0
+  - nbconvert-core=7.16.6=py311h06a4308_0
+  - nbformat=5.10.4=py311h06a4308_0
   - ncurses=6.4=h6a678d5_0
+  - nest-asyncio=1.6.0=py311h06a4308_0
   - nettle=3.7.3=hbbd107a_1
   - networkx=3.1=py311h06a4308_0
+  - notebook=7.3.2=py311h06a4308_0
+  - notebook-shim=0.2.4=py311h06a4308_0
   - numba=0.59.1=py311h96b013e_0
   - numexpr=2.8.7=py311h65dcdc2_0
   - numpy=1.26.4=py311h08b1b3b_0
   - numpy-base=1.26.4=py311hf175353_0
   - openh264=2.1.1=h4ff587b_0
   - openjpeg=2.4.0=h3ad879b_0
-  - openssl=3.0.14=h5eee18b_0
+  - openssl=3.0.16=h5eee18b_0
+  - overrides=7.4.0=py311h06a4308_0
   - pandas=2.2.1=py311ha02d727_0
+  - pandocfilters=1.5.0=pyhd3eb1b0_0
+  - parso=0.8.4=py311h06a4308_0
   - pcre2=10.42=hebb0a14_1
+  - pexpect=4.8.0=pyhd3eb1b0_3
   - pillow=10.3.0=py311h5eee18b_0
   - pip=24.0=py311h06a4308_0
   - platformdirs=4.2.2=pyhd8ed1ab_0
   - ply=3.11=py311h06a4308_0
   - pooch=1.8.1=pyhd8ed1ab_0
+  - prometheus_client=0.21.0=py311h06a4308_0
+  - prompt-toolkit=3.0.43=py311h06a4308_0
+  - prompt_toolkit=3.0.43=hd3eb1b0_0
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.2=pyhd3eb1b0_0
   - pycparser=2.22=pyhd8ed1ab_0
+  - pygments=2.15.1=py311h06a4308_1
   - pyparsing=3.0.9=py311h06a4308_0
   - pyqt=5.15.10=py311h6a678d5_0
   - pyqt5-sip=12.13.0=py311h5eee18b_0
@@ -157,6 +202,8 @@ dependencies:
   - pysoundfile=0.12.1=pyhd8ed1ab_0
   - python=3.11.9=h955ad1f_0
   - python-dateutil=2.9.0post0=py311h06a4308_2
+  - python-fastjsonschema=2.20.0=py311h06a4308_0
+  - python-json-logger=3.2.1=py311h06a4308_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
   - python_abi=3.11=2_cp311
   - pytorch=2.3.0=py3.11_cuda11.8_cudnn8.7.0_0
@@ -165,20 +212,30 @@ dependencies:
   - pytorch-mutex=1.0=cuda
   - pytz=2024.1=py311h06a4308_0
   - pyyaml=6.0.1=py311h5eee18b_0
+  - pyzmq=26.2.0=py311h6a678d5_0
   - qt-main=5.15.2=h53bd1ea_10
   - readline=8.2=h5eee18b_0
+  - referencing=0.30.2=py311h06a4308_0
   - requests=2.32.3=pyhd8ed1ab_0
+  - rfc3339-validator=0.1.4=py311h06a4308_0
+  - rfc3986-validator=0.1.1=py311h06a4308_0
+  - rpds-py=0.22.3=py311h4aa5aa6_0
   - scikit-learn=1.5.0=py311he08f58d_1
   - scipy=1.12.0=py311h08b1b3b_0
+  - send2trash=1.8.2=py311h06a4308_1
   - setuptools=69.5.1=py311h06a4308_0
   - sip=6.7.12=py311h6a678d5_0
   - six=1.16.0=pyhd3eb1b0_1
+  - soupsieve=2.5=py311h06a4308_0
   - soxr=0.1.3=h0b41bf4_3
   - soxr-python=0.3.7=py311h1f0f07a_0
   - sqlite=3.45.3=h5eee18b_0
+  - stack_data=0.2.0=pyhd3eb1b0_0
   - sympy=1.12=py311h06a4308_0
   - tbb=2021.8.0=hdb19cb5_0
+  - terminado=0.17.1=py311h06a4308_0
   - threadpoolctl=3.5.0=pyhc1e730c_0
+  - tinycss2=1.4.0=py311h06a4308_0
   - tk=8.6.14=h39e8969_0
   - torchaudio=2.3.0=py311_cu118
   - torchmetrics=1.4.0.post0=pyhd8ed1ab_0
@@ -186,47 +243,72 @@ dependencies:
   - torchvision=0.18.0=py311_cu118
   - tornado=6.3.3=py311h5eee18b_0
   - tqdm=4.66.4=pyhd8ed1ab_0
-  - typing-extensions=4.11.0=hd8ed1ab_0
-  - typing_extensions=4.11.0=pyha770c72_0
+  - traitlets=5.14.3=py311h06a4308_0
+  - typing-extensions=4.12.2=py311h06a4308_0
+  - typing_extensions=4.12.2=py311h06a4308_0
   - tzdata=2024a=h04d1e81_0
   - unicodedata2=15.1.0=py311h5eee18b_0
   - urllib3=2.2.1=pyhd8ed1ab_0
+  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - webencodings=0.5.1=py311h06a4308_1
+  - websocket-client=1.8.0=py311h06a4308_0
   - wheel=0.43.0=py311h06a4308_0
   - x264=1!157.20191217=h7b6447c_0
   - xz=5.4.6=h5eee18b_1
   - yaml=0.2.5=h7b6447c_0
+  - zeromq=4.3.5=h6a678d5_0
   - zip=3.0=hd590300_3
   - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=h5eee18b_1
   - zstd=1.5.5=hc292b87_2
   - pip:
+      - annotated-types==0.7.0
+      - anyio==4.9.0
+      - audiomentations==0.40.0
+      - blosc2==3.2.1
       - chai-sacred==0.8.3
       - chardet==3.0.4
       - click==8.1.7
+      - distro==1.9.0
       - docker-pycreds==0.4.0
       - docopt==0.6.2
       - einops==0.8.0
+      - ffmpeg==1.4
       - gensim==4.3.2
       - gitdb==4.0.11
       - gitpython==3.1.43
       - googletrans==3.0.0
-      - h11==0.9.0
       - h2==3.2.0
+      - hopfield-layers==1.0.2
       - hpack==3.0.0
       - hstspreload==2024.6.1
-      - httpcore==0.9.1
-      - httpx==0.13.3
+      - httpcore==1.0.7
+      - httpx==0.28.1
       - huggingface-hub==0.23.2
       - hyperframe==5.2.0
       - idna==2.10
+      - jiter==0.9.0
       - jsonpickle==3.0.4
+      - julius==0.2.7
       - minimp3py==0.2.3
+      - mir-eval==0.8.2
       - munch==2.5.0
+      - ndindex==1.9.2
       - nltk==3.8.1
+      - numpy-minmax==0.3.1
+      - numpy-rms==0.4.2
+      - ollama==0.4.7
+      - openai==1.68.2
       - packaging==24.0
+      - pot==0.9.5
+      - primepy==1.3
       - protobuf==4.25.3
       - psutil==5.9.8
       - py-cpuinfo==9.0.0
+      - pydantic==2.10.6
+      - pydantic-core==2.27.2
+      - pydub==0.25.1
+      - python-stretch==0.3.1
       - regex==2024.5.15
       - rfc3986==1.5.0
       - safetensors==0.4.3
@@ -235,11 +317,14 @@ dependencies:
       - smart-open==7.0.4
       - smmap==5.0.1
       - sniffio==1.3.1
+      - tables==3.10.2
       - textaugment==1.3.4
       - textblob==0.17.1
       - timm==0.4.12
       - tokenizers==0.19.1
+      - torch-audiomentations==0.12.0
+      - torch-pitch-shift==1.2.5
       - transformers==4.41.2
       - wandb==0.17.0
       - wrapt==1.16.0
-prefix: /home/paul/miniconda3/envs/salsa
+prefix: /home/timo/miniconda3/envs/salsa
