--- a/environment.yml
+++ b/environment.yml
@@ -48,7 +48,6 @@ dependencies:
   - fontconfig=2.14.1=h4c34cd2_2
   - fonttools=4.51.0=py311h5eee18b_0
   - freetype=2.12.1=h4a9f257_0
-  - fsspec=2024.5.0=pyhff2d567_0
   - gettext=0.22.5=h59595ed_2
   - gettext-tools=0.22.5=h59595ed_2
   - glib=2.78.4=h6a678d5_0
@@ -146,7 +145,6 @@ dependencies:
   - llvm-openmp=14.0.6=h9e868ea_0
   - llvmlite=0.42.0=py311h6a678d5_0
   - lz4-c=1.9.4=h6a678d5_1
-  - markupsafe=2.1.3=py311h5eee18b_0
   - matplotlib=3.8.4=py311h06a4308_0
   - matplotlib-base=3.8.4=py311ha02d727_0
   - matplotlib-inline=0.1.6=py311h06a4308_0
@@ -167,7 +165,6 @@ dependencies:
   - ncurses=6.4=h6a678d5_0
   - nest-asyncio=1.6.0=py311h06a4308_0
   - nettle=3.7.3=hbbd107a_1
-  - networkx=3.1=py311h06a4308_0
   - notebook=7.3.2=py311h06a4308_0
   - notebook-shim=0.2.4=py311h06a4308_0
   - numba=0.59.1=py311h96b013e_0
@@ -183,7 +180,6 @@ dependencies:
   - parso=0.8.4=py311h06a4308_0
   - pcre2=10.42=hebb0a14_1
   - pexpect=4.8.0=pyhd3eb1b0_3
-  - pillow=10.3.0=py311h5eee18b_0
   - pip=24.0=py311h06a4308_0
   - platformdirs=4.2.2=pyhd8ed1ab_0
   - ply=3.11=py311h06a4308_0
@@ -206,7 +202,6 @@ dependencies:
   - python-json-logger=3.2.1=py311h06a4308_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
   - python_abi=3.11=2_cp311
-  - pytorch=2.3.0=py3.11_cuda11.8_cudnn8.7.0_0
   - pytorch-cuda=11.8=h7e8668a_5
   - pytorch-lightning=2.2.2=pyhd8ed1ab_0
   - pytorch-mutex=1.0=cuda
@@ -231,16 +226,12 @@ dependencies:
   - soxr-python=0.3.7=py311h1f0f07a_0
   - sqlite=3.45.3=h5eee18b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
-  - sympy=1.12=py311h06a4308_0
   - tbb=2021.8.0=hdb19cb5_0
   - terminado=0.17.1=py311h06a4308_0
   - threadpoolctl=3.5.0=pyhc1e730c_0
   - tinycss2=1.4.0=py311h06a4308_0
   - tk=8.6.14=h39e8969_0
-  - torchaudio=2.3.0=py311_cu118
   - torchmetrics=1.4.0.post0=pyhd8ed1ab_0
-  - torchtriton=2.3.0=py311
-  - torchvision=0.18.0=py311_cu118
   - tornado=6.3.3=py311h5eee18b_0
   - tqdm=4.66.4=pyhd8ed1ab_0
   - traitlets=5.14.3=py311h06a4308_0
@@ -265,20 +256,28 @@ dependencies:
       - annotated-types==0.7.0
       - anyio==4.9.0
       - audiomentations==0.40.0
+      - bertopic==0.17.0
       - blosc2==3.2.1
       - chai-sacred==0.8.3
       - chardet==3.0.4
+      - choreographer==1.0.9
       - click==8.1.7
+      - colorcet==3.1.0
+      - colorspacious==1.1.2
+      - datamapplot==0.4.2
+      - datashader==0.18.1
       - distro==1.9.0
       - docker-pycreds==0.4.0
       - docopt==0.6.2
       - einops==0.8.0
       - ffmpeg==1.4
+      - fsspec==2024.6.1
       - gensim==4.3.2
       - gitdb==4.0.11
       - gitpython==3.1.43
       - googletrans==3.0.0
       - h2==3.2.0
+      - hdbscan==0.8.40
       - hopfield-layers==1.0.2
       - hpack==3.0.0
       - hstspreload==2024.6.1
@@ -287,44 +286,90 @@ dependencies:
       - huggingface-hub==0.23.2
       - hyperframe==5.2.0
       - idna==2.10
+      - imageio==2.37.0
+      - importlib-resources==6.5.2
       - jiter==0.9.0
       - jsonpickle==3.0.4
       - julius==0.2.7
+      - kaleido==1.0.0
+      - lexical-diversity==0.1.1
+      - lexicalrichness==0.5.1
+      - logistro==1.1.0
+      - markupsafe==2.1.5
       - minimp3py==0.2.3
       - mir-eval==0.8.2
+      - multipledispatch==1.0.0
       - munch==2.5.0
+      - narwhals==1.41.0
       - ndindex==1.9.2
+      - networkx==3.3
       - nltk==3.8.1
       - numpy-minmax==0.3.1
       - numpy-rms==0.4.2
+      - nvidia-cublas-cu12==12.1.3.1
+      - nvidia-cuda-cupti-cu12==12.1.105
+      - nvidia-cuda-nvrtc-cu12==12.1.105
+      - nvidia-cuda-runtime-cu12==12.1.105
+      - nvidia-cudnn-cu12==8.9.2.26
+      - nvidia-cufft-cu12==11.0.2.54
+      - nvidia-curand-cu12==10.3.2.106
+      - nvidia-cusolver-cu12==11.4.5.107
+      - nvidia-cusparse-cu12==12.1.0.106
+      - nvidia-nccl-cu12==2.20.5
+      - nvidia-nvjitlink-cu12==12.9.86
+      - nvidia-nvtx-cu12==12.1.105
       - ollama==0.4.7
       - openai==1.68.2
+      - orjson==3.11.0
       - packaging==24.0
+      - param==2.2.0
+      - pillow==11.0.0
+      - plotly==6.1.2
       - pot==0.9.5
       - primepy==1.3
       - protobuf==4.25.3
       - psutil==5.9.8
       - py-cpuinfo==9.0.0
+      - pyarrow==20.0.0
+      - pyct==0.5.0
       - pydantic==2.10.6
       - pydantic-core==2.27.2
       - pydub==0.25.1
+      - pylabeladjust==0.1.13
+      - pynndescent==0.5.13
+      - pyqtree==1.0.0
       - python-stretch==0.3.1
+      - rcssmin==1.2.1
       - regex==2024.5.15
       - rfc3986==1.5.0
+      - rjsmin==1.2.4
       - safetensors==0.4.3
+      - scikit-image==0.25.2
+      - seaborn==0.13.2
+      - sentence-transformers==4.1.0
       - sentry-sdk==2.3.1
       - setproctitle==1.3.3
+      - simplejson==3.20.1
       - smart-open==7.0.4
       - smmap==5.0.1
       - sniffio==1.3.1
+      - sympy==1.13.3
       - tables==3.10.2
       - textaugment==1.3.4
       - textblob==0.17.1
+      - tifffile==2025.5.26
       - timm==0.4.12
       - tokenizers==0.19.1
+      - toolz==1.0.0
+      - torch==2.3.0+cu121
       - torch-audiomentations==0.12.0
       - torch-pitch-shift==1.2.5
+      - torchaudio==2.3.0+cu121
+      - torchvision==0.18.0+cu121
       - transformers==4.41.2
+      - triton==2.3.0
+      - umap-learn==0.5.7
       - wandb==0.17.0
       - wrapt==1.16.0
+      - xarray==2025.4.0
 prefix: /home/timo/miniconda3/envs/salsa
